syntax = "proto3";

option go_package = "/pb";
package pb;

import "google/protobuf/wrappers.proto";

service CardService {
  rpc QueryCard (YGOResource) returns (YGOCard);
}

message YGOResource {
  string ID = 1;
}

message YGOCard {
  string ID = 1;
  string color = 2;
  string name = 3;
  string attribute = 4;
  string effect = 5;
  google.protobuf.StringValue monsterType = 6;
  google.protobuf.UInt32Value attack = 7;
  google.protobuf.UInt32Value defense = 8;
}
